--- a/CAN.tex
+++ b/CAN.tex
@@ -24,6 +24,8 @@
 \usepackage[textsize=footnotesize]{todonotes}
 \usepackage{pdfpages}
 \usepackage{ulem}
+\usepackage[round]{natbib}
+
 
 \hypersetup{pdftitle={CAN Bus over Ethernet, SS2014}, pdfauthor={R. Löffler, C. Proske, M. Sharkhawy}}
 
