--- a/quellen.bib
+++ b/quellen.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for sPooKee at 2014-06-21 17:10:29 +0200 
+%% Created for sPooKee at 2014-06-21 17:26:12 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{WI1,
+	Abstract = {Der CAN-Bus (Controller Area Network) ist ein serielles Bussystem und geh{\"o}rt zu den Feldbussen.},
+	Author = {Wikipedia},
+	Date-Added = {2014-06-21 15:24:52 +0000},
+	Date-Modified = {2014-06-21 15:26:11 +0000},
+	Lastchecked = {21.06.2014},
+	Title = {Controller Area Network},
+	Urldate = {14.06.2014},
+	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Controller_Area_Network}}
 
 @url{CBM,
 	Annote = {http://rs232-rs485.blogspot.co.at/2009/11/can-bus-message-frames-overload.html},
