Busankoplung, High/Lowspeed CAN

--- a/quellen.bib
+++ b/quellen.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for sPooKee at 2014-06-21 17:26:12 +0200 
+%% Created for sPooKee at 2014-06-22 12:39:54 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{VEC,
+	Author = {Vector Informatik GmbH},
+	Date-Added = {2014-06-22 10:39:05 +0000},
+	Date-Modified = {2014-06-22 10:39:36 +0000},
+	Lastchecked = {22.06.2014},
+	Title = {Einf{\"u}hrung in CAN},
+	Bdsk-Url-1 = {https://elearning.vector.com/index.php?seite=vl_can_introduction_de&root=376493&wbt_ls_kapitel_id=504193&wbt_ls_seite_id=504213&d=yes}}
+
+@url{KFZ,
+	Author = {H. Huppertz},
+	Date-Added = {2014-06-22 10:21:04 +0000},
+	Date-Modified = {2014-06-22 10:21:52 +0000},
+	Lastchecked = {22.06.2014},
+	Title = {CAN-Bus 1 (Vor-/Nachteile)},
+	Bdsk-Url-1 = {http://www.kfz-tech.de/CAN-Bus.htm}}
 
 @url{WI1,
 	Abstract = {Der CAN-Bus (Controller Area Network) ist ein serielles Bussystem und geh{\"o}rt zu den Feldbussen.},
