--- a/content.tex
+++ b/content.tex
@@ -17,17 +17,26 @@ Die physikalischen Eigenschaften und der Formale Aufbau des CAN Busses
 wird in folgenden ISO Normen genau spezifiziert \citep[nach][]{WI1}:
 
 \begin{itemize}
-\item ISO 11898-1:2003 Road vehicles — Controller area network — Part 1: Data link layer and physical signalling
-\item ISO 11898-2:2003 Road vehicles — Controller area network — Part 2: High-speed medium access unit
-\item ISO 11898-3:2006 Road vehicles — Controller area network — Part 3: Low-speed, fault-tolerant, medium dependent interface
-\item ISO 11898-4:2004 Road vehicles — Controller area network — Part 4: Time-triggered communication
-\item ISO 11898-5:2007 Road vehicles — Controller area network — Part 5: High-speed medium access unit with low-power mode
-\item ISO/NP 11898-6 Road vehicles — Controller area network — Part 6: High-speed medium access unit with selective wake-up functionality
+\item ISO 11898-1:2003 Road vehicles — Controller area network — 
+Part 1: Data link layer and physical signalling
+\item ISO 11898-2:2003 Road vehicles — Controller area network — 
+Part 2: High-speed medium access unit
+\item ISO 11898-3:2006 Road vehicles — Controller area network — 
+Part 3: Low-speed, fault-tolerant, medium dependent interface
+\item ISO 11898-4:2004 Road vehicles — Controller area network — 
+Part 4: Time-triggered communication
+\item ISO 11898-5:2007 Road vehicles — Controller area network — 
+Part 5: High-speed medium access unit with low-power mode
+\item ISO/NP 11898-6 Road vehicles — Controller area network — 
+Part 6: High-speed medium access unit with selective wake-up functionality
 \end{itemize}
 
 \subsubsection{Übertragungsgeschwindigkeiten}
 
-Aufgrund der Ausbreitungsgeschwindigkeit der Signale auf dem Bus, ist die Übetragungsgeschwindigkeit von der Leitungslänge abhängig. Die folgene Tabelle zeigt eine Zuordnung von Leitungslängen und Übertragunsgeschwindigkeiten.
+Aufgrund der Ausbreitungsgeschwindigkeit der Signale auf dem Bus, ist die 
+Übetragungsgeschwindigkeit von der Leitungslänge abhängig. Die Tabelle 
+\ref{tab:speed} beinhaltet eine Zuordnung von Leitungslängen und deren 
+maximaler Übertragunsgeschwindigkeit und andersrum.
 
 \begin{table}[h]
 	\centering
@@ -44,7 +53,23 @@ Aufgrund der Ausbreitungsgeschwindigkeit der Signale auf dem Bus, ist die Übetr
 \end{table}
 
 \subsection{Busankoplung/Vernetzung von CAN-Knoten}
-	
+
+Der CAN Bus arbeitet nach dem Multi-Master Prinzip, wonach es jedem Knoten 
+möglich ist, mit jedem anderen Knoten zu kommunizieren. Üblicherweise in 
+Linientopologie verbunden, können laut ISO 119898 bis zu 32 Knoten damit
+verbunden werden. Die Signalübetragung erfolgt symmetrisch.
+
+\begin{figure}[h] 
+\centering
+\includegraphics[width=0.7\textwidth]{figures/cannet}
+\caption{Vernetzung von CAN Knoten \citep{VEC}} 
+\label{data}
+\end{figure} 
+
+Auf dem physischen Medium werden die einzelnen Bits über Spannungsdifferenzen
+abgebildet. Man unterscheidet hier zwischen Highspeed-CAN und Lowspeed-CAN.
+
+\clearpage
 \subsection{CAN-Bus Pegel} Beim CAN-Bus erfolgt die Übertragung der
 Bits über 2 Pegel: 
 \begin{itemize} 
@@ -54,6 +79,20 @@ Bits über 2 Pegel:
 
 Wenn beide Pegel gleichzeitig gesendet werden, so überschreibt immer
 der dominante Pegel den rezessiven Pegel.
+
+\begin{figure}[h] 
+\centering
+\includegraphics[width=0.7\textwidth]{figures/highcan}
+\caption{Highspeed-CAN Buspegel \citep{VEC}} 
+\label{data}
+\end{figure} 
+
+\begin{figure}[h] 
+\centering
+\includegraphics[width=0.7\textwidth]{figures/lowcan}
+\caption{Loewspeed-CAN Buspegel \citep{VEC}} 
+\label{data}
+\end{figure} 
 	
 \subsection{Bit Stuffing} 
 Bit-Stuffing beim CAN-Bus bedeutet, dass
