--- a/quellen.bib
+++ b/quellen.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for sPooKee at 2014-06-22 12:39:54 +0200 
+%% Created for sPooKee at 2014-06-26 20:48:43 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{MAN,
+	Author = {rn-wissen.de},
+	Date-Added = {2014-06-26 18:48:05 +0000},
+	Date-Modified = {2014-06-26 18:48:43 +0000},
+	Lastchecked = {26.06.2014},
+	Title = {Manchester Codierung},
+	Urldate = {11.10.2009},
+	Bdsk-Url-1 = {http://www.rn-wissen.de/index.php/Manchester-_Codierung}}
+
+@url{NRZ,
+	Author = {Wikipedia},
+	Date-Added = {2014-06-26 18:37:18 +0000},
+	Date-Modified = {2014-06-26 18:37:47 +0000},
+	Lastchecked = {26.06.2014},
+	Title = {Non Return to Zero},
+	Urldate = {20.01.2014},
+	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Non_Return_to_Zero}}
 
 @url{VEC,
 	Author = {Vector Informatik GmbH},
