--- a/content.tex
+++ b/content.tex
@@ -197,7 +197,7 @@ einer Nachricht gesendet werden, sobald eben ein Fehler erkannt wurde.
 	
 \subsection{Zeichenkodierung}
 	
-Auf der BUS Leitung werden die einzelnen Bits der Pakete über den 
+Auf der Busleitung werden die einzelnen Bits der Pakete über den 
 Non-Return-to-Zero Code (NRZ) codiert. Hierbei hat jeder Wert eines Bit 
 einen konstanten Zusatand auf der Leitung (siehe Abb. \ref{nrzcode}).
 
@@ -209,7 +209,7 @@ einen konstanten Zusatand auf der Leitung (siehe Abb. \ref{nrzcode}).
 \end{figure} 
 
 Probleme bei dieser Codierung können auftreten, wenn mehrere gleiche Symbole in Folge
-gesendet werden. Abhilfe schafft hier Bit-Struffing, näheres dazu in Kapitel ~\ref{sec:bittiming}.
+gesendet werden. Abhilfe schafft hier Bit-Struffing, näheres dazu in Kapitel ~\ref{sec:security}.
 
 Als Vergleich zur NRZ Codierung sollte man noch den Manchester-Code erwähnen, bei dem
 jeweils eine steigende, bzw. fallende Taktflanke einen Bit-Wert repräsentiert (Abb. \ref{mancode}).
@@ -222,18 +222,23 @@ reproduzierbar sind.
 \caption{Manchester-Code \citep{MAN}} 
 \label{mancode}
 \end{figure} 
-
-\subsection{Bit-Timing}
-\label{sec:bittiming}
 	
 \subsection{Synchronisatzion}
+
+Da die CAN Knoten nur eine gemeinsame Baud-Rate, jedoch keinen gemeinsamen Takt besitzen, 
+wird der Daten-Frame selbst zur Synchronization verwendet. Es gibt eine Hard- und eine Soft-Synchronization,
+wobei die Hard-Synchronization die fallende Flanke des Startbits zur Synchronizierung verwendet. Alle 
+nachfolgenden abfallenden Flanken werden zur Soft-Synchronizierung verwendet. Durch die Soft-Synchronizierung
+kann sich der Takt nur noch in einem spezifizierten Rahmen verschieben (nach \citep{BSY}).
 	
 \subsection{Buszugriffsverfahren}
 	
 \subsection{Fehlermanagement}
 	
-\subsection{Sicherungsmechanismen/Fehlererkennung}
+\subsection{Sicherungsmechanismen und Fehlererkennung}
+\label{sec:security}
 
+\newpage
 \section{CAN Bus over Ethernet}
 	
 \subsection{Probleme}
