--- a/content.tex
+++ b/content.tex
@@ -229,7 +229,7 @@ Da die CAN Knoten nur eine gemeinsame Baud-Rate, jedoch keinen gemeinsamen Takt 
 wird der Daten-Frame selbst zur Synchronization verwendet. Es gibt eine Hard- und eine Soft-Synchronization,
 wobei die Hard-Synchronization die fallende Flanke des Startbits zur Synchronizierung verwendet. Alle 
 nachfolgenden abfallenden Flanken werden zur Soft-Synchronizierung verwendet. Durch die Soft-Synchronizierung
-kann sich der Takt nur noch in einem spezifizierten Rahmen verschieben (nach \citep{BSY}).
+kann sich der Takt nur noch in einem spezifizierten Rahmen verschieben \citep[nach][]{BSY}.
 	
 \subsection{Buszugriffsverfahren}
 	
@@ -254,6 +254,6 @@ kann sich der Takt nur noch in einem spezifizierten Rahmen verschieben (nach \ci
 \newpage \addcontentsline{toc}{section}{Abbildungen} \listoffigures
 
 \newpage \addcontentsline{toc}{section}{Literatur}
-\bibliographystyle{abbrv} 
-%\bibliographystyle{alphadin}
+%\bibliographystyle{abbrv} 
+\bibliographystyle{alphadin}
 \bibliography{quellen}
