--- a/quellen.bib
+++ b/quellen.bib
@@ -102,3 +102,16 @@
 	Urldate = {04.10.2010},
 	Year = {2010},
 	Bdsk-Url-1 = {http://marco.guardigli.it/2010/10/hacking-your-car.html}}
+
+@webpage{STE,
+	Author = {SYS TEC electronics},
+	Date-Added = {2014-06-21 14:36:56 +0000},
+	Date-Modified = {2014-06-26 19:26:44 +0000},
+	Lastchecked = {27.06.2014},
+	Month = {6},
+	Read = {0},
+	Title = {CAN-Ethernet Gateway},
+	Url = {http://www.systec-electronic.com/de/produkte/industrielle-kommunikation/schnittstellen-und-gateways/can-ethernet-gateway-v2},
+	Urldate = {04.10.2010},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.systec-electronic.com/de/produkte/industrielle-kommunikation/schnittstellen-und-gateways/can-ethernet-gateway-v2}}
